--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pillow==10.4.0
 pymongo==4.9.1
 pypng==0.20220715.0
 qrcode==7.4.2
+svgwrite==1.4.3
 typing_extensions==4.12.2
 Werkzeug==3.0.4
 zipp==3.20.2
